# training

./: .gitignore  README.md
advanced-graphics/canvas/practice/: .prettierrc  package.json
advanced-graphics/canvas/slides/: index.html
async/python/: .flaskenv  README.rst  pyproject.toml
async/python/app/: aiohttp.py  flask.py  test.py
devdays-2025-ai/: .env.local.example  .gitignore  README.md  bun.lockb  package.json
devdays-2025-ai/slides/: index.html
devdays-2025-ai/src/: database.ts  index.ts  openai.ts
devdays-2025-ai/workshop/: README.md  local.db
devdays-2025-ai/workshop-part-1/: README.md  en-input.txt  fr-input.txt
devdays-2025-ai/workshop-part-2/: .env.local.example  README.md  bun.lockb  package.json
expo-training/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
expo-training/components/: Button.tsx  Camera.tsx  HelloWorld.tsx  IssueCreator.tsx  Picture.tsx  PictureEditor.tsx
express/: README.md  jest.config.js  package-lock.json  package.json
express/src/: index.test.ts  index.ts
graphql/: README.md  package.json  tsconfig.json
graphql/src/: index.ts
graphql/star-wars/: data.ts  star-wars-schema.ts
kubernetes/: README.md
kubernetes/app/: README.md  server.js
kubernetes/greg-10-08-2022/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  pod.yaml  replicaset.yaml  service.yaml
sequelize/: README.md  package.json
vpc/: README.md
vpc/terraform/: .terraform.lock.hcl  main.tf
xstate/: README.md
xstate/slides/: presentation.html
xstate/src/: App.tsx
xstate/workshop/src/: App.tsx
(+126 files in other folders)
