[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kenzo Naito <kenzo.naito@edhec.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
python-dotenv = "^0.14.0"
aiohttp = "^3.6.2"
gunicorn = "^20.0.4"
pytest-aiohttp = "^0.3.0"
docutils = "^0.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
